--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 services:
-  api:
+  app:
     build: .
     ports:
       - "5000:5000"
     volumes:
-      - .:/app  # Mount the current directory into the container
+      - .:/app
     env_file:
       - .env
+    dns:
+      - 8.8.8.8
