Change key name env

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 EXPIRY_DAYS_DEFAULT = 3
 SECRET_KEY=
-USERNAME=phuc
+USERNAME_ENV=phuc
 # password=phucnv
-PASSWORD='$2b$12$z/OxfOfYiPC3tpepm0LpAO3IBDWRjPhmXp/1OBPIkniVlEtj5dnVe'
+PASSWORD_ENV='$2b$12$z/OxfOfYiPC3tpepm0LpAO3IBDWRjPhmXp/1OBPIkniVlEtj5dnVe'
 DB_NAME=your_database_name
 COLLECTION_ID=your_collection_id
 AZURE_CONNECTION_URI=your_connection_string
